--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@400;700&family=Dancing+Script:wght@400;700&display=swap">
 
+  <!-- TAILWIND -->
+  <link href="/dist/output.css" rel="stylesheet">
   <title>Vite + React</title>
 </head>
 
