--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,10 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Google Fonts -->
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@400;700&family=Dancing+Script:wght@400;700&display=swap">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Itim&family=Montserrat:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
 
   <!-- TAILWIND -->
   <link href="/dist/output.css" rel="stylesheet">
