--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
     <!-- TAILWIND -->
     
     <link href="/dist/output.css" rel="stylesheet">
-  <title>ChefGpt</title>
+  <title>Cook GPT</title>
 
  
 </head>
